[package]
name = "mqtt-codec"
version = "0.1.0"
authors = ["boom <warunyou_d@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.6.0", features = ["codec"] }
futures-util = { version = "0.3.8", features = ["sink"] }
bytes = "1.0.0"